ic-small-text-changes

--- a/html/ivens-craft/ic-craft_legacies.html
+++ b/html/ivens-craft/ic-craft_legacies.html
@@ -181,7 +181,7 @@
 
 						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, “Elizabeth (Betty) with Portrait of William Alfred Craft 2” (Photograph, March 18, 2023), Hope McCaffrey Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This photograph shows Elizabeth (Betty) Ann Trussler (born in 1939 and married in 1960 to Cedric Moxey) holding a framed photo portrait of her grandfather, William Alfred Craft, who was the son of William Ivens Craft. Betty recalls how details of the family's Black ancestry were purposefully forgotten.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph shows Elizabeth (Betty) Ann Trussler (born in 1939 and married in 1960 to Cedric Moxey) holding a framed photo portrait of her grandfather, William Alfred Craft, who was the son of William Ivens Craft. Betty recalled how details of the family's Black ancestry were purposefully forgotten.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
