--- a/html/ivens-craft/ic-family_loss.html
+++ b/html/ivens-craft/ic-family_loss.html
@@ -146,7 +146,7 @@
 
 						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “William Ivens Craft in Coal Yard” (Photograph, 1855-1926), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This photograph shows William Ivens Craft standing in a coal yard in England with his fellow workers. He is on the viewer's left, leaning against the cart. In the 1911 England Census, William Ivens listed his occupation as “coal agent,” and was still listed as such on his daughter's marriage record the following year. This image was likely captured around then.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph shows William Ivens Craft standing in a coal yard in England with his fellow workers. He is on the viewer's left, leaning against the cart. In the 1911 England Census, William Ivens listed his occupation as “coal agent,” and he was still recorded as such on his daughter's marriage record the following year. This image was likely captured during those years.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
