--- a/html/ivens-craft/ic-growing_roots.html
+++ b/html/ivens-craft/ic-growing_roots.html
@@ -146,7 +146,7 @@
 
 						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, “Charlotte Street” (Photograph, March 15, 2023), Hope McCaffrey Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This photograph shows the ”Charlotte Street” sign, hanging next to an street lamp made to look like an old gas lamps. It was on this street, in 1882, where William Ivens decided to take cheaper lodgings and moved in with the Le Jeune family. It was also on this street, that he must have falled in love with Louisa Le Jeune.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph shows the ”Charlotte Street” sign in 2023, hanging next to an street lamp made to look like an old gas lamps. It was on this street, in 1882, where William Ivens decided to take cheaper lodgings and moved in with the Le Jeune family. It was also on this street, that he likely fell in love with Louisa Le Jeune.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
