--- a/html/ivens-craft/ic-looking_for_louisa.html
+++ b/html/ivens-craft/ic-looking_for_louisa.html
@@ -142,7 +142,7 @@
 
 						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Vanished_Methodist_Church,_Hackney._old_postcard_c_1905.jpg">Richmond Road, Hackney</a>” (Image, c.1905), <em>Wikimedia Commons</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/2.0/deed.en">Creative Commons Attribution-Share Alike 2.0 Generic</a>.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This image from a postcard shows Richmod Road in what is now the London Borough of Hackney, circa 1905. Louisa Woodley was born in Hackney around 1853. She might have, in her childhood, walked past this church on one of the main thoroughfares of the area. This church no longer stands.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This image from a postcard shows Richmond Road in what is now the London Borough of Hackney, circa 1905. Louisa Woodley was born in Hackney around 1853. She might have, in her childhood, walked past this church on one of the main thoroughfares of the area. The church no longer exists.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
