--- a/html/ivens-craft/ic-losing_finding.html
+++ b/html/ivens-craft/ic-losing_finding.html
@@ -161,7 +161,7 @@
 
 						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://www.loc.gov/resource/cph.3c08043/">Men Working in Railway Mail Train</a>” (Photograph, c.1909-1932), Library of Congress, Prints & Photographs Division, LC-USZ62-108043. No known restrictions on the photographs in the National Photo Company Collection.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This photograph, taken in the early twentieth century, depicts the interior of a railway train car and the conditions in which mail agents worked. In the 1870s, William Ivens Craft and his brother labored under similar conditions as agents in the American South on the Post Office Rail Services.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph, taken in the early twentieth century, depicts the interior of a railway train car and the conditions in which mail agents worked. In the 1870s, William Ivens Craft and his brother labored under similar conditions as agents in the US American South on the Post Office Rail Services.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
