--- a/html/ivens-craft/ic-reconstruction.html
+++ b/html/ivens-craft/ic-reconstruction.html
@@ -163,7 +163,7 @@
 
 						<p id="caption"><strong>Lead image caption:</strong> John W. Moulton; John S. Moulton, “<a aria-label="External Link" href="https://www.loc.gov/item/2017657067/">Howard University</a>” (Photograph, c.1867-1920), Library of Congress, Prints & Photographs Division, LC-DIG-stereo-1s07887. No known restrictions on publication.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This photograph shows a large group of men and women, presumably students, standing on the lawn in front of Howard University in Washington, D. C. This photo captured the school as it looked in the late nineteenth century, as it might have when Brougham Craft, William Ivens’ brother, attended for a stint in the 1870s when the two were in Washington, D. C. It is possible, though we have no record of it, that William Ivens also went to school at Howard while in that city and surrounded by the flourishing intellectual and political Black political culture.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph shows a large group of men and women, presumably students, standing on the lawn in front of Howard University in Washington, D. C. This photo captured the school as it looked in the late nineteenth century, as it might have when Brougham Craft, William Ivens’ brother, attended for a stint in the 1870s while the two lived in Washington, D. C. It is possible, though we have no record of it, that William Ivens also went to school at Howard while in that city, surrounded by the flourishing Black intellectual and political culture.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
