--- a/html/ivens-craft/ic-transatlantic_family.html
+++ b/html/ivens-craft/ic-transatlantic_family.html
@@ -148,7 +148,7 @@
 
 						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, “Street View of Vicarage Farm Road” (Photograph, March 18, 2023), Hope McCaffrey Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This photograph gives us a streetview of the last house that William Ivens Craft lived in with his family, on Vicarage Farm Road in Hounslow. The homes featured a cozy brick facade with red window trim and were called "Kiatta Villages." Although this was only one of many houses that William Ivens lived in throughout his life, that he lived here with his children and grandchildren made it home.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph gives us a streetview of the last house that William Ivens Craft lived in with his family, on Vicarage Farm Road in Hounslow. The homes featured a cozy brick facade with red window trim and were called "Kiatta Villas." Although this was only one of many houses that William Ivens lived in during his life, that he lived here with his children and grandchildren made it home.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
