--- a/html/ivens-craft/ic-looking_for_louisa.html
+++ b/html/ivens-craft/ic-looking_for_louisa.html
@@ -107,13 +107,13 @@
 					<section aria-labelledby="introduction"><!-- Change -->
 						<h3 id="introduction">Introduction</h3><!-- Change -->
 
-						<p>Little is currently known or remembered about Louisa Le Jeune Craft – William Ivens’ wife and the mother of his children. What we do know is that when she entered William Ivens’ tumultuous life, so too did a period of calm and stability which, ironically, left few paper traces through which we can understand this time in William Ivens’ life.</p>
+						<p>Little is currently known or remembered about Louisa Le Jeune Craft – William Ivens’ wife and the mother of his children. What we do know is that when she entered William Ivens’ tumultuous life, she likely changed the course of his life and precipitated his stay in England. However, piecing together and understanding Louisa’s life has proved elusive for researchers and descendants alike. Who was Louisa Craft?</p>
 					</section>
 
 					<section aria-labelledby="looking"><!-- Change -->
 						<h3 id="looking">Looking for Louisa</h3><!-- Change -->
 
-						<p>Craft descendants recall that family lore had them believe William Ivens rescued a destitute Irish woman and her children from the streets of London. Historical records, specifically those letters held by the Bodleian Library, show us that it was in fact the other way around (Copeland and Copeland 2021). What the family story reflects, however, is how little is known or remembered about William Ivens’ wife. From extant records we see that Louisa, the daughter of John Gilbert Woodley, a gardener-turned-tailor, was born in Hackney around 1853 (“1861 England Census”; “Pallot’s Marriage Index” 1837). Likely named after her Tottenham-born mother, Louisa Spooner, Louisa and her family lived on Holly Street in Hackney throughout the 1850s. Located in north-east London, Hackney was far removed from the Craft home in Hammersmith lived in the 1850s. Though both came of age in London in the 1850s, it was unlikely William Ivens and Louisa crossed paths prior to 1882.</p>
+						<p>Craft descendants recall that family lore had them believe William Ivens rescued a destitute Irish woman and her children from the streets of London. Historical records, specifically those letters held by the Bodleian Library, show us that it was probably in fact the other way around (Copeland and Copeland 2021). What the family story reflects, however, is how little is known or remembered about William Ivens’ wife.</p>
 
 						<aside class="text-box">The letters of William Ivens Craft held at the Bodleian “completely turned upside down [...] what we thought with William Ivens.” The story that the letters revealed was “such a revelation to the whole family.”<br/> 
 						<span class="right">– Eileen Copeland and Martin Copeland</span></aside>
