--- a/html/ivens-craft/ic-looking_for_louisa.html
+++ b/html/ivens-craft/ic-looking_for_louisa.html
@@ -99,6 +99,9 @@
 						<ol aria-label="Menu">
 							<li><a href="#introduction">Introduction</a></li><!-- Change -->
 							<li><a href="#looking">Looking for Louisa</a></li><!-- Change -->
+							<li><a href="#lejeune">Life as a Le Jeune</a></li>
+							<li><a href="#separated">A Family Separated</a></li>
+							<li><a href="#together">Together, Again, Forever</a></li>
 							<li><a href="#citation">Page Citation</a></li>
 							<li><a href="#image-details">Lead Image Details</a></li>
 						</ol>
@@ -107,24 +110,51 @@
 					<section aria-labelledby="introduction"><!-- Change -->
 						<h3 id="introduction">Introduction</h3><!-- Change -->
 
-						<p>Little is currently known or remembered about Louisa Le Jeune Craft – William Ivens’ wife and the mother of his children. What we do know is that when she entered William Ivens’ tumultuous life, she likely changed the course of his life and precipitated his stay in England. However, piecing together and understanding Louisa’s life has proved elusive for researchers and descendants alike. Who was Louisa Craft?</p>
+						<p>Little is currently known or remembered about Louisa Le Jeune Craft, William Ivens’ wife and the mother of his children. What we do know is that when she entered William Ivens’ story, she likely changed the course of his life by precipitating his stay in England. However, piecing together and understanding Louisa’s life has proved elusive for researchers and descendants alike. Who was the real Louisa Craft?</p>
 					</section>
 
 					<section aria-labelledby="looking"><!-- Change -->
 						<h3 id="looking">Looking for Louisa</h3><!-- Change -->
 
-						<p>Craft descendants recall that family lore had them believe William Ivens rescued a destitute Irish woman and her children from the streets of London. Historical records, specifically those letters held by the Bodleian Library, show us that it was probably in fact the other way around (Copeland and Copeland 2021). What the family story reflects, however, is how little is known or remembered about William Ivens’ wife.</p>
+						<p>Craft descendants recall family lore that had them believe William Ivens rescued a destitute Irish woman and her children from the streets of London. Historical records, specifically those letters held by the Bodleian Library, show us that it was, probably, the other way around (Copeland and Copeland 2021). What this family story reflects, however, is how little is known or remembered about William Ivens’ wife.</p>
 
 						<aside class="text-box">The letters of William Ivens Craft held at the Bodleian “completely turned upside down [...] what we thought with William Ivens.” The story that the letters revealed was “such a revelation to the whole family.”<br/> 
 						<span class="right">– Eileen Copeland and Martin Copeland</span></aside>
 
-						<p>Louisa was sixteen years old at the time of her marriage to Felix Le Jeune in 1869. The young girl scribbled a wobbly “X” on the marriage certificate under Felix Le Jeune’s flourishing signature. The pair married at the grand St. George’s Parish Church in Bloomsbury (“England Marriages and Banns” 1869). The Le Jeune family was able to afford servants in the 1870s, as indicated by a publicized incident. In 1878, Felix and Louisa took a servant of theirs, Annie Church, to court for stealing a gold ring worth six pounds. Louisa testified in court, claiming that she had spotted the ring at a nearby pawnbroker’s shop. The story circulated in <em>The Standard</em> (Anonymous 1878i).</p>
+						<p>Yet Louisa, it turns out, was not who researchers and descendants alike thought she was. Initially, researchers, genealogists, and descendants believed that Louisa Craft was the daughter of Louisa Spooner and John Gilbert Woodley (a gardener-turned-tailor), born around 1853 in Hackney (“1861 England Census”; “Pallot’s Marriage Index” 1837). However, a recent discovery by family member and genealogist extraordinaire Pam Knight uncovered the <em>real</em> Louisa.</p>
 
-						<p>Likely unable to read or write, Louisa may have welcomed the company of someone her own age when William Ivens started boarding at their home in 1882, her husband nearly twenty years her elder. William Ivens’ descendants assume that Louisa was white, as there are no records that have been found yet that indicate otherwise (Copeland and Copeland 2021).</p>
+						<p>The woman who married Felix Le Jeune and then William Ivens Craft was born Louisa Mary Charouneau on 24 June 1852 in Marylebone. Louisa Mary was the daughter of William George Charouneau and Mary Ann Woodley. John Gilbert Woodley, it would seem, was her uncle. Louisa Mary’s father, who was of Huguenot descent, was a tailor. She was baptized at St. Ann’s church in Soho on 29 March 1857 with her sister, Amy Eliza, who was five years younger than her (“Westminster, London, England, Church of England Births and Baptisms, 1813-1919,” 1857; Pam Knight email 23 June 2024). William Ivens and Louisa Mary were born just three years and several miles apart, but they grew up in different worlds.</p>
 
-						<p>William Ivens and Louisa married in the spring of 1888 in Holborn (“Marriage Index” 1888). Three years later, their family had grown by three more: Clara Eugenie was born in 1888, William Alfred in 1889, and young Brougham – named for his uncle – in 1891. William Ivens found employment doing domestic work. Louisa’s oldest son, fifteen-year-old Charles Le Jeune, worked as a shoemaker’s assistant, and her thirteen-year-old son, Henry Le Jeune, was employed as an “office boy.” Including the children from Louisa’s first marriage, the household numbered ten, and the family moved first to Chelsea and then to 57 New Broad Street, in Bishopsgate (“Register of Birth” 1889; “1891 England Census”).</p>
+					<section aria-labelledby="lejeune"><!-- Change -->
+						<h3 id="lejeune">Life as a Le Jeune</h3>
 
-						<p>With three wage-earners, the Craft family experienced a period of relative stability in London – at least in comparison to William Ivens’ tumultuous years of scarcity. Less than three years passed between William Ivens’ return to London and the birth of his first child, but the hardship and poverty he faced in that time must have made the next years of financial stability even more valuable. The more stable William Ivens’ life became, however, the less paper trail he seems to have left behind. As a result, historians must rely more on family and oral histories to trace the years after William Ivens met and married Louisa.</p>
+						<p>Mystery shrouds Louisa Mary’s childhood. Where did she live and what did she do in the years between when she lived at home with both of her parents, and ten years later, when she was married with children? Why did she, upon her first marriage, give her mother maiden’s name as her last name? And why did she, as a girl of just sixteen years old, marry a French man twenty-four years her elder? Pam Knight suggests that it is likely Louisa Mary’s mother died in the early 1860s, after which Louisa Mary may have gone to live with her uncle, which would also explain why John Woodley appeared as Louisa Mary’s father on her wedding day (Pam Knight email 17 July 2024). Why Louisa Mary was estranged from her own father remains a mystery, as well.</p>
+
+						<p>Louisa Mary, a teenager likely unable to read or write at the time of her marriage to forty-year-old Felix Le Jeune in 1869, scribbled a wobbly “X” on the marriage certificate under Felix Le Jeune’s flourishing signature.  She listed John Woodley, her uncle, as her father. The pair married at the grand St. George’s Parish Church in Bloomsbury (“England Marriages and Banns,” 1869). What is apparent is that Felix Le Jeune was able to offer Louisa Mary financial security. In the 1870s, the Le Jeune household boasted at least one domestic servant. (This servant, however, caused the family trouble. In 1878, Felix and Louisa Mary took Annie Church, their servant, to court for stealing a gold ring worth six pounds. Louisa testified in court, claiming that she had spotted the ring at a nearby pawnbroker’s shop. The story circulated in <em>The Standard</em> (Anonymous 1878i).)</p>
+
+						<p>Louisa Mary may have welcomed the company of someone her own age when William Ivens moved into their modest boardinghouse business in 1882. It is not known how, why, or when their affection grew into love (if indeed ever), but less than a year after Felix’s death, Louisa and William Ivens welcomed their first daughter, Ellen Louisa Craft. WIlliam Ivens and Louisa Mary, who lived at 16 Little Titchfield Street when Ellen Louisa was born, were not married, complicating the family’s tenuous situation. The months and years that followed Ellen Louisa’s birth in April of 1884 seem to have been challenging and likely heartbreaking for William Ivens, Louisa, and all of her children.</p>
+
+					<section aria-labelledby="separated"><!-- Change -->
+						<h3 id="separated">A Family Separated</h3>
+
+						<p>On the first of October, 1884, Louisa Mary was admitted to the St. Pancras workhouse with three of her children (“London, England, Selected Poor Law Removal,” 1884). These workhouses – sometimes referred to as poorhouses – were deficient social safety nets for those who struggled to find work, food, and lodging in the tumultuous era of industrialization. The workhouse was truly a place of last resort, and the sum Felix left Louisa Mary must have not gone very far. Before going to St. Pancras, Louisa Mary likely would have needed to first apply for financial assistance from the Overseers of the Poor. Once she did that, she was likely required to enter the workhouse and part from her children, who were sent to children’s homes. As family member and researcher Pam Knight reminds us, there is very little we can assume or know about the struggles the young couple faced in these years – and why they made the choices they did (if in fact it was up to them at all) (Pam Knight email, 11 July 2024).</p>
+
+						<p>Le Jeune family descendants recall that Louisa Mary and Felix’s four sons (Charles, Henry, Arthur, and Ernest) were subsequently sent away from their family in the years that their mother struggled financially. The two eldest, Charles and Henry, went to an orphanage school in Birmingham, and Arthur and Ernest ended up in Brentwood. When in his nineties, Henry recalled for his descendants the experience of being put on a train bound for Birmingham at the London Midland Railway Station at the age of five. He remembered being passed from adult to adult, the last guardian receiving six pence to escort the young boy to his assigned institution in Birmingham. Felix and Louisa Mary’s descendant, Maureen [last name], said of this period: “Although Henry remained in Birmingham continuously for some 5 years until the age of about 11, he seldom spoke of this period in later life, preferring to submerge the painful memory.” (Maureen [last name] email 26 June 2024).</p>
+
+						<p>The family was further split up when Jean Louis Lejeune, Felix’s brother, arrived from France in order to help administer Felix’s estate – according to family history. When he returned to France around 1884, he brought his eleven-year-old niece, Louisa Mary’s eldest child, Louisa, with him, raising her as his own daughter (Maureen [last name] email 26 June 2024).</p>
+
+						<section aria-labelledby="together"><!-- Change -->
+							<h3 id="together">Together, Again, Forever</h3>
+
+						<p>William Ivens and Louisa were reunited and subsequently married in the spring of 1888 in Holborn (“Marriage Index” 1888). Three years later, their family came together again under one roof. And it even grew by three: Clara Eugenie was born in 1888, William Alfred in 1889, and young Brougham – named for his uncle – in 1891. William Ivens found employment doing domestic work. Fifteen-year-old Charles Le Jeune worked as a shoemaker’s assistant and thirteen-year-old Henry, who had returned after spending five or six years in Birmingham, was employed as an “office boy.” Altogether the household numbered ten. They lived first in Chelsea and then at 57 New Broad Street, in Bishopsgate (“Register of Birth” 1889; “1891 England Census”; Maureen [last name] email 26 June 2024).</p>
+
+						<span class="center vertical">
+							<img loading="lazy" class="illustration" width="624" height="808" src="/img/ivens-craft/liv_028058_0001_deriv-908px.jpg" srcset="/img/ivens-craft/liv_028058_0001_deriv-200px.jpg 200w, /img/ivens-craft/liv_028058_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028058_0001_deriv-400px.jpg 400w, /img/ivens-craft/liv_028058_0001_deriv-444px.jpg 444w, /img/ivens-craft/liv_028058_0001_deriv-490px.jpg 490w, /img/ivens-craft/liv_028058_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028058_0001_deriv-888px.jpg 888w, /img/ivens-craft/liv_028058_0001_deriv-980px.jpg 980w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="Portrait of a seated man in a suit, who looks at the camera." />
+							</span>
+							
+							<p class="caption-text">Anonymous, “William Alfred Craft” (Photograph, United Kingdom, [c.1889-1929]), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>. William Alfred Craft, son of Louisa and William Ivens Craft,  born in 1889, and named after either William Ivens or his father (or both), and William Ivens’ younger brother, Alfred.</p>
+
+						<p>Louisa Mary – the <em>real</em> Louisa Mary – remains one of the most elusive characters of this story. While researchers and descendants continue to piece together the dramatic lives of the British Craft lineage, we continue to rely on family memories and scarce documents to find and understand Louisa Mary (Charouneau Woodley Le Jeune) Craft.</p>
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
@@ -140,9 +170,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Vanished_Methodist_Church,_Hackney._old_postcard_c_1905.jpg">Richmond Road, Hackney</a>” (Image, c.1905), <em>Wikimedia Commons</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/2.0/deed.en">Creative Commons Attribution-Share Alike 2.0 Generic</a>.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “Ellen Louisa Craft” (Photograph, United Kingdom, [c.1890-1950]), Martin Copeland Private Collection, United Kingdom. < aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This image from a postcard shows Richmond Road in what is now the London Borough of Hackney, circa 1905. Louisa Woodley was born in Hackney around 1853. She might have, in her childhood, walked past this church on one of the main thoroughfares of the area. The church no longer exists.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> Ellen Louisa Craft, eldest daughter and first-born of Louisa and William Ivens Craft. While no known images of Louisa exist today, we can view this photo of Ellen Louisa Craft and wonder: might she have resembled her mother?</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
