--- a/html/ivens-craft/ic-transatlantic_family.html
+++ b/html/ivens-craft/ic-transatlantic_family.html
@@ -118,6 +118,7 @@
 						</p>
 
 						[double image]
+						This is one of 7 images published by this project, all of which exhibit the same material characteristics due to coming from a single album held by the Avery Research Center.
 
 						<p>That same year, William Ivens’ son, William Alfred, married a woman named Elizabeth Christian. Another family reunion occurred in the early 1920s, when William Ivens’ brother, Charles, came to London. In the words of William Ivens’ great-grandson, and William Alfred’s grandson, Chris Clark, “They must have had plenty to talk about after all those years” (Copeland 2021; Clark 2021).</p>
 
