--- a/html/ivens-craft/ic-vertical-imgs.html
+++ b/html/ivens-craft/ic-vertical-imgs.html
@@ -151,10 +151,10 @@
 
 
 <span class="center vertical">
-<img loading="lazy" class="illustration" width="624" height="832" src="/img/ivens-craft/liv_028076_0001_deriv-908px.jpg" srcset="/img/ivens-craft/liv_028076_0001_deriv-200px.jpg 200w, /img/ivens-craft/liv_028076_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028076_0001_deriv-400px.jpg 400w, /img/ivens-craft/liv_028076_0001_deriv-444px.jpg 444w, /img/ivens-craft/liv_028076_0001_deriv-490px.jpg 490w, /img/ivens-craft/liv_028076_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028076_0001_deriv-888px.jpg 888w, /img/ivens-craft/liv_028076_0001_deriv-980px.jpg 980w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="View looking down a street with buildings on both sides and parked cars." />
-</span>
+  <img loading="lazy" class="illustration" width="624" height="832" src="/img/ivens-craft/liv_028076_0001_deriv-908px.jpg" srcset="/img/ivens-craft/liv_028076_0001_deriv-200px.jpg 200w, /img/ivens-craft/liv_028076_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028076_0001_deriv-400px.jpg 400w, /img/ivens-craft/liv_028076_0001_deriv-444px.jpg 444w, /img/ivens-craft/liv_028076_0001_deriv-490px.jpg 490w, /img/ivens-craft/liv_028076_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028076_0001_deriv-888px.jpg 888w, /img/ivens-craft/liv_028076_0001_deriv-980px.jpg 980w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="View looking down a street with buildings on both sides and parked cars." />
+  </span>
 
-<p class="caption-text">Hope McCaffrey, “Cambridge Grove Street View” (Photograph, London, March 16, 2023), Hope McCaffrey Private Collection, New York City, United States. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>. [Descriptive caption.]</p>
+<p class="caption-text">Hope McCaffrey, “Cambridge Grove Street View” (Photograph, 16 March 2023), Hope McCaffrey Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>. The view looking down the street that is now Cambridge Grove, but was Cambridge Road back in the mid-nineteenth century, when the Craft family resided there. This view would likely seem at once familiar and foreign were the Crafts to walk the street today.</p>
 
 
 <span class="center vertical">
