--- a/html/ivens-craft/ic-craft_legacies.html
+++ b/html/ivens-craft/ic-craft_legacies.html
@@ -140,11 +140,17 @@
 
 						<p>Moreover, this genealogical amnesia may have also been purposeful, an attempt to protect the family during a time of anti-Black sentiment in England. Chris Clark guesses that his grandparents “conspired to ‘lose’ the family history of the fugitive slaves,” and “to erase it from the collective memory as far as possible.” He adds: “I must say that they were remarkably successful in this” (Clark 2023a; add citation for email from March 21, 2024). And yet, Julia-Ellen Craft Davis, a great-granddaughter of William Ivens’ brother Charles, reminds us to be thankful that the effort “to hide the family’s ancestry in England was not completely successful” (Davis 2023).</p>
 
-						[double image]
+						<div class="double-image">
+							<img loading="lazy" width="345" height="522" src="/img/ivens-craft/liv_028017_0001_deriv-690px.jpg" srcset="/img/ivens-craft/liv_028017_0001_deriv-690px.jpg 690w, /img/ivens-craft/liv_028017_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028017_0001_deriv-572px.jpg 572w, /img/ivens-craft/liv_028017_0001_deriv-436px.jpg 436w, /img/ivens-craft/liv_028017_0001_deriv-345px.jpg 345w, /img/ivens-craft/liv_028017_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028017_0001_deriv-286px.jpg 286w, /img/ivens-craft/liv_028017_0001_deriv-218px.jpg 218w" sizes="(min-width: 992px) 345px, (min-width: 768px) 312px, (min-width: 480px) calc(50vw - 22px), calc(100vw - 34px)" alt="Woman wearing a long coat and hat walking down a sidewalk." />
+							
+							<img loading="lazy" width="345" height="522" src="/img/ivens-craft/liv_028018_0001_deriv-436px.jpg" srcset="/img/ivens-craft/liv_028018_0001_deriv-690px.jpg 690w, /img/ivens-craft/liv_028018_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028018_0001_deriv-572px.jpg 572w, /img/ivens-craft/liv_028018_0001_deriv-436px.jpg 436w, /img/ivens-craft/liv_028018_0001_deriv-345px.jpg 345w, /img/ivens-craft/liv_028018_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028018_0001_deriv-286px.jpg 286w, /img/ivens-craft/liv_028018_0001_deriv-218px.jpg 218w" sizes="(min-width: 992px) 345px, (min-width: 768px) 312px, (min-width: 480px) calc(50vw - 22px), calc(100vw - 34px)" alt="Woman in a sunhat and dress sitting in a chair on the beach." />
+							</div>
+							
+							<p class="caption-text">(Left) Anonymous, “Ellen Louisa Craft Clark” (Photograph, [c.1920-1952]), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>. (Right) Anonymous, “Ellen Louisa Craft Clark” (Photograph, [c.1920-1952]), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>. Ellen (Nellie) Craft Clark later in her life, as her grandchildren (Chris Clark and Martin Copeland, William Ivens’ great grandchildren) remember her.</p><!--Fix coding for LR and TB-->
 
 						<p>What Martin Copeland does remember from his childhood, however, was that they lived three generations to a home. A boy of only four when his grandmother, Nellie Clark, passed, Martin regrets that he did not get the chance to hear more of her stories – a kind of regret that only hindsight produces (Copeland and Copeland 2021).</p>
 
-						<aside class="text-box">“I was only 4 years old when I attended grandma’s funeral at Mortlake, but I can remember the flowers and the grief.”<br/> 
+						<aside class="text-box">“I was only 4 years old when I attended Grandma’s funeral at Mortlake, but I can remember the flowers and the grief.”<br/> 
 							<span class="right">– Chris Clark</span></aside>
 					</section>
 
